# twodbattle

./: Cargo.toml  net_test.sh
src/: battlefield.rs  battlefield_controller.rs  battlefield_view.rs  cell.rs  cli.yml  collision.rs  entity.rs  lib.rs  local_input_controller.rs  main.rs  map.rs  map_controller.rs  map_generator.rs  map_view.rs  network_controller.rs  network_host_controller.rs  player.rs  player_controller.rs  player_view.rs  shot.rs  shot_controller.rs  shot_view.rs
src/network/: client_controller.rs  host_controller.rs  messages.rs  mod.rs
