[package]
name = "twodbattle"
version = "0.1.0"
authors = ["succcubbus"]
edition = "2018"

[[bin]]
name="twodbattle"

[dependencies]
itertools = "0.8.0"
piston = "0.48.0"
pistoncore-glutin_window = "0.62.1"
piston2d-graphics = "0.32.0"
piston2d-opengl_graphics = "0.65.0"
rand = "0.6.5"
laminar = "0.2.3"
failure = "0.1.5"
serde = { version = "1.0.92", features = ["derive"] }
bincode = "1.1.4"
crossbeam = "0.7.1"
clap = "2.33.0"
